--- a/C05ReferenceType/.project
+++ b/C05ReferenceType/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ch02Example.md</name>
+	<name>C05ReferenceType</name>
 	<comment></comment>
 	<projects>
 	</projects>
